// Copyright 2020 The Measurement System Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.common.crypto;

option java_package = "org.wfanet.measurement.common.crypto";
option java_multiple_files = true;

// Public keys of the ElGamal cipher.
message ElGamalPublicKey {
  // Public key generator `g`.
  bytes generator = 2;
  // Public key element `y = g^x`, where `g` is the generator and `x` is the
  // secret key.
  bytes element = 3;
}

// Keys of the ElGamal cipher.
message ElGamalKeyPair {
  // Secret key of the ElGamal cipher.
  bytes secret_key = 1;
  // Public key of the ElGamal cipher.
  ElGamalPublicKey public_key = 2;
}

// Parameters of the polya distribution.
// S. Goryczka and L. Xiong, "A Comprehensive Comparison of Multiparty Secure
// Additions with Differential Privacy," in IEEE Transactions on Dependable and
// Secure Computing, vol. 14, no. 5, pp. 463-477, 1 Sept.-Oct. 2017,
// doi: 10.1109/TDSC.2015.2484326.
message PolyaParameters {
  double r = 1;  // any real number.
  double p = 2;  // 0<p<1
}